docs/admission-controller/version-1.36/modules/en/pages/howtos/emergency-disable.adoc
include::partial$variables.adoc[]
= Emergency disable
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-06-18
:page-revdate: {revdate}
:sidebar_label: Emergency disable
:sidebar_position: 31
:title: Emergency disable
:description: Learn how to disable the {admc-name} in emergency situations, stopping and deleting related configurations, and then restore.
:keywords: ["{admc-name}", kubewarden, ClusterAdmissionPolicies, AdmissionPolicies, configuration]
:doc-persona: kubewarden-operator
:doc-type: howto
:doc-topic: operator-manual

In an emergency, operations teams might need to perform actions that {admc-name} would block.

This document explains how to disable {admc-short-name} so operations teams can address cluster failures. After resolving the situation, operations teams can restart {admc-short-name}.

== Disable {admc-short-name}

First, stop the {admc-short-name} controller. You do this by scaling its Deployment to zero:

[source,console]
----
kubectl scale deployment kubewarden-controller \
  --replicas=0 \
  -n kubewarden
----

[tip]
====
Ensure you use the name of the Namespace where the {admc-short-name} stack is deployed.
Here, the stack is deployed in the `kubewarden` Namespace.
====

Next, delete all the `ValidatingWebhookConfigurations` and `MutatingWebhookConfigurations`
created by {admc-short-name}:

[source,console,subs="+attributes"]
----
# Delete all the ValidatingWebhookConfiguration created by {admc-short-name}
kubectl delete validatingwebhookconfigurations \
  -l app.kubernetes.io/part-of=kubewarden

# Delete all the MutatingWebhookConfiguration created by {admc-short-name}
kubectl delete mutatingwebhookconfigurations \
  -l app.kubernetes.io/part-of=kubewarden
----

== Restore {admc-short-name}

When the emergency is over, restore the {admc-short-name} stack by bringing back
the {admc-short-name} controller:

[source,console]
----
kubectl scale deployment kubewarden-controller \
  --replicas=1 \
  -n kubewarden
----

[tip]
====
- Ensure you use the name of the Namespace where the {admc-short-name} stack is deployed.
  Here, the stack is deployed in the `kubewarden` Namespace.
- Ensure you scale the controller back to its original value. This example assumes
  there's only one replica of the controller running.
====
Once the controller is running, it reconciles the deployed
policies. The `ValidatingWebhookConfiguration` and `MutatingWebhookConfiguration` resources,
previously deleted, are recreated, thus enforcing the policies.
